add login page functionality

--- a/src/www/index_electron.html
+++ b/src/www/index_electron.html
@@ -18,14 +18,14 @@
 <html dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <title>Outline</title>
+    <title>Cryptanica</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no" />
   </head>
   <body unresolved>
     <script>
       // exposed in preload.ts
       if (window.electron.os.platform === 'linux') {
-        document.title = 'Outline Beta';
+        document.title = 'Cryptanica Beta';
       }
     </script>
     <app-root></app-root>
